<resources>
    <string name="app_name">MaterialDrawer</string>
    <string name="action_settings1">Settings1</string>
    <string name="action_settings2">Settings2</string>
    <string name="action_settings3">Settings3</string>
    <string name="action_settings4">Settings4</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="unusual_jams">异常拥堵</string>
    <string name="regular_jam">常规拥堵</string>

    <string name="traffic_incidents">交通事件</string>
    <string name="event_publishing">事件发布</string>
    <string name="study_analysis">研判分析</string>
    <string name="traffic_reports">交通路况</string>

    <string name="transport_layer">交通图层</string>
    <string name="traffic_report">交通报告</string>

</resources>
